test/error/syn/functionParameterExp.tig
let
    function fun(z, a*b, c, -d, f) := 
    (
    )
in
end
